# nzb-core

./: .woodpecker.yml  Cargo.toml
.codesight/: CODESIGHT.md
.forgejo/workflows/: ci.yml
.github/workflows/: ci.yml
src/: config.rs  db.rs  lib.rs  models.rs  nzb_parser.rs  sabnzbd_import.rs
