[package]
name = "nzb-core"
version = "0.1.1"
edition = "2024"
description = "Shared models, config, NZB parser, and SQLite database for NZB clients"
license = "MIT"
repository = "https://github.com/AusAgentSmith-org/nzb-core"

[features]
default = []
groups-db = []

[dependencies]
nzb-nntp = { git = "https://github.com/AusAgentSmith/nzb-nntp.git", tag = "v0.1.1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
parking_lot = "0.12"
quick-xml = "0.37"
unicode-normalization = "0.1"

[dev-dependencies]
tempfile = "3"

[lints.clippy]
all = { level = "warn", priority = -1 }

[lints.rust]
unused = "warn"
